force-app/main/default/objects/Speaker__c/fields/Amount_To_Be_Refund__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_Be_Refund__c</fullName>
    <label>Amount To Be Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>