force-app/main/default/objects/Speaker__c/fields/Approved_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Approved_Sessions__c</fullName>
    <label>Approved Sessions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>