force-app/main/default/objects/Speaker__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>