force-app/main/default/objects/Speaker__c/fields/Content_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Id__c</fullName>
    <label>Content Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>