force-app/main/default/objects/Speaker__c/fields/Is_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Is_Attendee__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Attendee__c)),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Attendee</label>
    <type>Checkbox</type>
</CustomField>