force-app/main/default/objects/Speaker__c/fields/Parent_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Parent_Speaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The primary speaker of a co-speaker</description>
    <label>Parent Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <type>Lookup</type>
</CustomField>