force-app/main/default/objects/Speaker__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary?</label>
    <type>Checkbox</type>
</CustomField>