force-app/main/default/objects/Speaker__c/fields/Rejected_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Sessions__c</fullName>
    <label>Rejected Sessions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>