force-app/main/default/objects/Speaker__c/fields/Speaker_Age__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Age__c</fullName>
    <label>Speaker Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>