force-app/main/default/objects/Speaker__c/fields/Speaker_Gender__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Gender__c</fullName>
    <label>Speaker Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>