force-app/main/default/objects/Speaker__c/fields/Speaker_Role__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Role__c</fullName>
    <label>Speaker Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admins</fullName>
            </value>
            <value>
                <fullName>Developers</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Marketing Technologists</fullName>
            </value>
            <value>
                <fullName>Executives</fullName>
            </value>
            <value>
                <fullName>End Users</fullName>
            </value>
            <value>
                <fullName>ISV/SI Partners</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
                <isActive>false</isActive>
                <label>Architect</label>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
                <isActive>false</isActive>
                <label>Business Analyst</label>
            </value>
            <value>
                <fullName>CEO</fullName>
                <isActive>false</isActive>
                <label>CEO</label>
            </value>
            <value>
                <fullName>Designer</fullName>
                <isActive>false</isActive>
                <label>Designer</label>
            </value>
            <value>
                <fullName>Developer</fullName>
                <isActive>false</isActive>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Manager</fullName>
                <isActive>false</isActive>
                <label>Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>