force-app/main/default/objects/Speaker__c/fields/Speaker_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Social_Media__c</fullName>
    <label>Speaker Social Media</label>
    <type>Url</type>
</CustomField>