force-app/main/default/objects/Speaker__c/fields/Speaker_Target__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Target__c</fullName>
    <label>Speaker Target</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admins</fullName>
            </value>
            <value>
                <fullName>Developers</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Marketing Technologists</fullName>
            </value>
            <value>
                <fullName>Executives</fullName>
            </value>
            <value>
                <fullName>End Users</fullName>
            </value>
            <value>
                <fullName>ISV/SI Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>