force-app/main/default/objects/Speaker__c/fields/Speaker_Title__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Title__c</fullName>
    <label>Speaker Title</label>
    <type>TextArea</type>
</CustomField>