force-app/main/default/objects/Speaker__c/fields/Speaker_Type__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Type__c</fullName>
    <label>Speaker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Speaker</fullName>
            </value>
            <value>
                <fullName>Co-Speaker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>