force-app/main/default/objects/Speaker__c/fields/Submission_Received__c.field-meta.xml
<CustomField>
    <fullName>Submission_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submission Received</label>
    <type>Checkbox</type>
</CustomField>