force-app/main/default/objects/Speaker__c/fields/Ticket_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Amount__c</fullName>
    <label>Ticket Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>