force-app/main/default/objects/Speaker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Speaker_Name__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Email__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Speaker_Target__c</columns>
    <columns>Submission_Received__c</columns>
    <columns>Speaker_Type__c</columns>
    <columns>Speaker_Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>